--- a/GUI/PersonWindow.xaml
+++ b/GUI/PersonWindow.xaml
@@ -5,18 +5,18 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GUI"
         mc:Ignorable="d"
-        Title="PersonWindow" Height="360.187" Width="451.039">
-    <Grid Margin="0,0,22,0">
-        <TextBox x:Name="txtImie" HorizontalAlignment="Left" Height="40" TextWrapping="Wrap" VerticalAlignment="Top" Width="196" Margin="200,10,0,0" FontSize="16"/>
-        <TextBox x:Name="txtNazwisko" HorizontalAlignment="Left" Height="40" TextWrapping="Wrap" VerticalAlignment="Top" Width="196" Margin="200,51,0,0" FontSize="16"/>
-        <TextBox x:Name="txtPesel" Height="40" TextWrapping="Wrap" VerticalAlignment="Top" Margin="200,96,0,0" FontSize="16" HorizontalAlignment="Left" Width="196"/>
-        <TextBox x:Name="txtNrTel" HorizontalAlignment="Left" Height="40" TextWrapping="Wrap" VerticalAlignment="Top" Width="196" Margin="200,144,0,0" FontSize="16"/>
-        <Button x:Name="btnZatwierdz" Content="Zatwierdź" HorizontalAlignment="Left" VerticalAlignment="Top" Width="140" Margin="44,219,0,0" Height="50" Click="btnZatwierdz_Click"/>
-        <Button x:Name="btnAnuluj" Content="Anuluj" HorizontalAlignment="Left" VerticalAlignment="Top" Width="140" Margin="238,218,0,0" Height="50" RenderTransformOrigin="0.462,0.2" Click="btnAnuluj_Click"/>
-        <Label Content="Imie" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="30,15,0,0" Width="90" Height="40" FontSize="16"/>
-        <Label HorizontalAlignment="Left" VerticalAlignment="Top" Margin="30,57,0,0" Width="90" Height="40" Content="Nazwisko" FontSize="16"/>
-        <Label Content="PESEL" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="30,99,0,0" Width="90" Height="40" FontSize="16"/>
-        <Label Content="Numer Telefonu" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="30,141,0,0" Width="129" Height="40" FontSize="16"/>
+        Title="PersonWindow" Height="300" Width="450">
+    <Canvas Margin="0,0,0,0">
+        <TextBox x:Name="txtImie" HorizontalAlignment="Left" Height="40" TextWrapping="Wrap" VerticalAlignment="Top" Width="196" FontSize="16" Canvas.Left="200" Canvas.Top="15"/>
+        <TextBox x:Name="txtNazwisko" HorizontalAlignment="Left" Height="40" TextWrapping="Wrap" VerticalAlignment="Top" Width="196" FontSize="16" Canvas.Left="200" Canvas.Top="57"/>
+        <TextBox x:Name="txtPesel" Height="40" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="16" HorizontalAlignment="Left" Width="196" Canvas.Left="200" Canvas.Top="99"/>
+        <TextBox x:Name="txtNrTel" HorizontalAlignment="Left" Height="40" TextWrapping="Wrap" VerticalAlignment="Top" Width="196" FontSize="16" Canvas.Left="200" Canvas.Top="141"/>
+        <Button x:Name="btnZatwierdz" Content="Zatwierdź" HorizontalAlignment="Left" VerticalAlignment="Top" Width="140" Height="50" Click="btnZatwierdz_Click" Canvas.Left="40" Canvas.Top="200" FontSize="16"/>
+        <Button x:Name="btnAnuluj" Content="Anuluj" HorizontalAlignment="Left" VerticalAlignment="Top" Width="140" Height="50" RenderTransformOrigin="0.462,0.2" Click="btnAnuluj_Click" Canvas.Left="230" Canvas.Top="200" FontSize="16"/>
+        <Label Content="Imie" HorizontalAlignment="Left" VerticalAlignment="Top" Width="90" Height="40" FontSize="16" Canvas.Left="30" Canvas.Top="15"/>
+        <Label HorizontalAlignment="Left" VerticalAlignment="Top" Width="90" Height="40" Content="Nazwisko" FontSize="16" Canvas.Left="30" Canvas.Top="57"/>
+        <Label Content="PESEL" HorizontalAlignment="Left" VerticalAlignment="Top" Width="90" Height="40" FontSize="16" Canvas.Left="30" Canvas.Top="99"/>
+        <Label Content="Numer Telefonu" HorizontalAlignment="Left" VerticalAlignment="Top" Width="129" Height="40" FontSize="16" Canvas.Left="30" Canvas.Top="141"/>
 
-    </Grid>
+    </Canvas>
 </Window>
